--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ li {
 }
 
 .incomplete-area {
-  background-color: #c6ffe2;
+  background-color: #eeeeee;
   width: 400px;
   min-height: 200px;
   padding: 8px;
@@ -35,7 +35,7 @@ li {
 }
 
 .complete-area {
-  background-color: #ffffe0;
+  background-color: #eeeeee;
   width: 400px;
   min-height: 200px;
   padding: 8px;
